@@ -66,6 +66,12 @@ New Features
    highlighting speed up. Use FastVectorHighlighter.setPhraseLimit() to set limit
    (e.g. 5000). (Mike Sokolov via Koji Sekiguchi)
   
+ * LUCENE-3171: Added BlockJoinQuery and BlockJoinCollector, under the
+   new contrib/join module, to enable searches that require joining
+   between parent and child documents.  Joined (children + parent)
+   documents must be indexed as a document block, using
+   IndexWriter.add/UpdateDocuments ((Mark Harwood, Mike McCandless)
+
 API Changes
    
 Bug Fixes
